samples/_failures_safe/1761490330_e09bb6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28541ffc.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_28541ffc.c:143: error: expected ‘{’ at end of input
